[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ltparser"
description = "Simple parser for LTspice files."
readme = "README.rst"
requires-python = ">=3.9"
keywords = [
    "LTspice",
    "parser",
    "lcapy",
    "spice",
    "circuit",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy",
    "matplotlib",
]
authors = [{name = "Scott Prahl", email = "scott.prahl@oit.edu"}]
license = "MIT"
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/scottprahl/ltparser"
Documentation = "https://ltparser.readthedocs.io"
Source = "https://github.com/scottprahl/ltparser"
Tracker = "https://github.com/scottprahl/ltparser/issues"
Changelog = "https://github.com/scottprahl/ltparser/blob/main/docs/CHANGELOG.rst"

[tool.setuptools.dynamic]
version = {attr = "ltparser.__version__"}

[tool.setuptools]
include-package-data = true
packages = { find = { where = ["."], include = ["ltparser*"] } }

[tool.ruff]
line-length = 110

[tool.ruff.lint]
select = ["D", "E", "F", "W"]
ignore = ["D212", "E402", "E703", "F403"]
pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D100", "D103"]   # ignore missing docstring in test files
"jupyter_lite_config.py" = ["F821"]  # ignore undefined "c"

[tool.check-manifest]
ignore = [
  ".gh-pages/**",
  ".lite_src/**",
  ".readthedocs.yaml",
  ".yamllint",
  ".testignore",
  "_site/**",
  "docs/**",
  "jupyter_lite_config.json",
  "Makefile",
  "release.txt",
  "requirements-dev.txt",
]

[tool.pytest.ini_options]
markers = ["notebooks"]

[tool.pylint.messages_control]
disable = [
    "invalid-name",
    "line-too-long",
    "too-many-locals",
    "too-many-arguments",
    "too-many-positional-arguments",
    "consider-using-f-string",
    "too-many-statements",
    "duplicate-code",
    "C0114",
    "C0116",
]

[tool.black]
line-length = 110
